tests/ui/parser/issues/issue-87694-duplicated-pub.stderr
error: expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`, found keyword `pub`
  --> $DIR/issue-87694-duplicated-pub.rs:1:11
   |
LL | pub const pub fn test() {}
   |           ^^^ expected one of `async`, `extern`, `fn`, `safe`, or `unsafe`
   |
note: explicit visibility first seen here
  --> $DIR/issue-87694-duplicated-pub.rs:1:1
   |
LL | pub const pub fn test() {}
   | ^^^
help: there is already a visibility modifier, remove one
   |
LL - pub const pub fn test() {}
LL + pub const  fn test() {}
   |

error: aborting due to 1 previous error

